# netstacks-terminal

./: .gitignore  AUDIT-REPORT-2026-05-16.md  AUDIT-REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIX-PLAN-2026-05-16.md  LICENSE  NOTICE  README  README.md  SECURITY.md  SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: api.rs  biometric.rs  cert_manager.rs  crypto.rs  dev.rs  docs.rs  git_accounts.rs  git_api.rs  lib.rs  main.rs  models.rs  quick_actions.rs  scripts.rs  sftp.rs  telnet.rs  terminal.rs  tls.rs  tracked_router.rs  utf8_decoder.rs  ws.rs
agent/src/ai/: chat.rs  highlight.rs  mod.rs  oauth2.rs  onboarding.rs  profile.rs  providers.rs  safety.rs  sanitizer.rs
agent/src/ai/knowledge_packs/: core.rs  datacenter.rs  mod.rs  mpls.rs  routing.rs  security.rs  vendor_arista.rs  vendor_cisco.rs  vendor_juniper.rs  wireless.rs
agent/src/db/: ai_profile.rs  mod.rs  schema.sql
agent/src/discovery/: cli_neighbors.rs  integration_lookup.rs  mod.rs  nmap.rs  orchestrator.rs  snmp_neighbors.rs
agent/src/git/: mod.rs  ops.rs  types.rs
agent/src/integrations/: mod.rs  smtp.rs
agent/src/integrations/mcp/: client.rs  mod.rs  tool_wrapper.rs
agent/src/lsp/: host.rs  install.rs  mod.rs  plugins.rs  routes.rs  scratch.rs  session.rs  test_cmd.rs  types.rs  wheel.rs
agent/src/providers/: local.rs  mod.rs
agent/src/snmp/: cli_exec.rs  cli_parse.rs  dest.rs  mod.rs
agent/src/ssh/: approvals.rs  exec_pool.rs  host_keys.rs  jump.rs  mod.rs  test_utils.rs
agent/src/tasks/: approvals.rs  executor.rs  mod.rs  models.rs  progress.rs  react.rs  registry.rs  store.rs
agent/src/tasks/tools/: device_query.rs  edit_file.rs  filter.rs  mod.rs  mop.rs  output_validator.rs  patch_file.rs  registry.rs  send_email.rs  ssh_command.rs  write_file.rs  write_helpers.rs
agent/src/tunnels/: dynamic_forward.rs  health.rs  local_forward.rs  mod.rs
agent/tests/: install_integration.rs  lsp_integration.rs  tracked_router_test.rs
agent/tests/fixtures/fake-lsp/: Cargo.toml
agent/tests/fixtures/fake-lsp/src/: main.rs
docs/: AUTO-UPDATE.md  BUILD-LINUX.md  BUILD-MACOS.md  BUILD-WINDOWS.md
docs/superpowers/: TESTING-GAPS.md
docs/superpowers/plans/: 2026-05-02-ai-mode-prompt-overrides.md  2026-05-02-backend-api-coverage.md  2026-05-02-jump-host-auth.md  2026-05-02-test-suite-foundation.md  2026-05-15-phase1-agent-git-foundation.md  2026-05-15-phase2-context-menu-git-actions.md  2026-05-15-phase3-git-panel.md  2026-05-15-phase4-git-panel-actions.md  2026-05-16-phase1-client-side-language-features.md  2026-05-16-phase2-agent-lsp-foundation.md  2026-05-16-phase3-frontend-lsp-client.md  2026-05-16-phase4-pyrefly-plugin.md  2026-05-16-phase5-settings-ui-lsp-crud.md  2026-05-16-phase6-polish-loose-file-enterprise.md
docs/superpowers/specs/: 2026-05-02-ai-mode-prompt-overrides-design.md  2026-05-02-backend-api-coverage-design.md  2026-05-02-jump-host-auth-design.md  2026-05-02-test-suite-foundation-design.md  2026-05-15-git-workspace-design.md  2026-05-16-monaco-lsp-plugin-system-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.pact.config.ts
frontend/pacts/: terminal-controller.json
frontend/public/: app-config.json.no
frontend/scripts/: build-sidecar-linux.sh  build-sidecar-windows.ps1  build-sidecar.sh  generate-updater-keys.sh  stage-sidecar.cjs
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  setupTests.ts  tauri.d.ts
frontend/src-tauri/: .gitignore  Cargo.toml  Info.plist  entitlements.plist  netstacks.desktop  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src-tauri/windows/: installer.nsh
frontend/src/api/: agent.ts  agentDefinitions.ts  ai.ts  aiEngineerProfile.ts  alerts.ts  annotations.ts  auth.ts  bulkCommands.ts  cert.ts  changes.ts  client.ts  config.ts  configManagement.ts  controllerClient.ts  controllerMop.ts  crudFactory.ts  customCommands.ts  discovery.ts  docs.ts  enterpriseCredentials.ts  enterpriseDevices.ts  enterpriseSessions.ts  groups.ts  highlightRules.ts  hostKeys.ts  incidents.ts  layouts.ts  librenms.ts  localClient.ts  lookup.ts  mappedKeys.ts  mcp.ts  mop.ts  mopTestTerminal.ts  netbox.ts  netboxSources.ts  netdisco.ts  panelSettings.ts  profiles.ts  profilingAgents.ts  (+23 more)
frontend/src/commands/: activeContext.ts  index.ts  menuBridge.tsx  registry.ts  types.ts  useCommand.ts
frontend/src/components/: AIContextSummary.css  AIContextSummary.tsx  AIEngineerSettingsTab.tsx  AIFloatingChat.css  AIFloatingChat.tsx  AIInlineChat.css  AIInlineChat.tsx  AIInlinePopup.css  AIInlinePopup.tsx  AIInlineResult.css  AIInlineResult.tsx  AIMemoryTab.tsx  AIProgressPanel.css  AIProgressPanel.tsx  AIScriptGenerator.css  AIScriptGenerator.tsx  AISettingsTab.css  AISettingsTab.tsx  AISidePanel.css  AISidePanel.tsx  AITabInput.css  AITabInput.tsx  AboutModal.css  AboutModal.tsx  AgentDefinitionForm.tsx  AgentsPanel.css  AgentsPanel.tsx  AlertDetailTab.css  AlertDetailTab.tsx  AlertsPanel.css  AlertsPanel.tsx  AnnotationRenderer.css  AnnotationRenderer.tsx  ApiResourcesTab.css  ApiResourcesTab.tsx  ApiResponseTab.css  ApiResponseTab.tsx  AppGate.css  BackupHistoryTab.css  BackupHistoryTab.tsx  (+253 more)
frontend/src/contexts/: EnrichmentContext.tsx  MopExecutionContext.tsx  TokenUsageContext.tsx
frontend/src/hooks/: useAIAgent.ts  useAIHighlighting.ts  useAITabComplete.ts  useAgentTasks.ts  useAiPilot.ts  useAuth.ts  useBackgroundAIAgent.ts  useCertRenewal.ts  useChangeControl.ts  useCommandSafety.ts  useCommandSuggestions.ts  useContextMenu.ts  useDetection.ts  useDeviceSelection.ts  useDirtyGuard.ts  useDriftAlerts.ts  useDropdown.ts  useEditorFontSettings.ts  useEnrichment.ts  useEnterpriseSSH.ts  useGitStatus.ts  useHighlightRules.ts  useIdleTimeout.ts  useItemSelection.tsx  useJumpboxTerminal.ts  useKeyboard.ts  useLiveGroup.ts  useMenuEvents.ts  (+22 more)
(+179 files in other folders)
