[package]
name = "netstacks"
version = "0.1.0"
description = "AI-powered SSH terminal for network engineers"
authors = ["NetStacks <hello@netstacks.net>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/netstacks/netstacks-terminal"
homepage = "https://netstacks.net"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["macros"] }

[profile.release]
strip = false

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
