[package]
name = "netstacks"
version = "0.1.6"
description = "AI-powered SSH terminal for network engineers"
authors = ["NetStacks <hello@netstacks.net>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/netstacks/netstacks-terminal"
homepage = "https://netstacks.net"
# Force `cargo run` / `tauri dev` to use the NetStacks binary target
# (Cargo package name stays lowercase by convention; macOS dock shows
# the executable name, so the [[bin]] override is what gets the dock
# label right in dev mode).
default-run = "NetStacks"

# Override the binary filename so `target/debug/NetStacks` (capitalised)
# is what macOS displays in the dock during `tauri dev`. The bundled
# .app already uses productName="NetStacks" from tauri.conf.json — this
# brings dev mode in line with that.
[[bin]]
name = "NetStacks"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["macros", "fs"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
# Poison-free mutexes for shared Tauri state — a panic in any
# tauri::command handler can't permanently break the MenuItemRegistry
# (and any future shared state should consume this too).
parking_lot = "0.12"

[profile.release]
strip = false

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
